--- a/src/layout/Header/Header.module.css
+++ b/src/layout/Header/Header.module.css
@@ -18,7 +18,7 @@
 	margin-bottom: 74px;
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 400px) {
 	.md {
 		display: none;
 	}
@@ -53,6 +53,7 @@
 		min-height: 812px;
 		background-position: center;
 		background-repeat: no-repeat;
+		background-size: cover;
 	}
 }
 
