--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -104,7 +104,7 @@
 @media screen and (max-width: 800px) {
 	.card {
 		display: grid;
-		grid-template-rows: 1fr 250px;
+		grid-template-rows: 1fr auto;
 		box-shadow: 0px 5px 18px rgba(0, 0, 0, 0.3);
 	}
 
